--- a/.config
+++ b/.config
@@ -120,7 +120,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
-
+CONFIG_PACKAGE_luci-theme-material=y
 
 # 设置dnsmasq
 
