--- a/.config
+++ b/.config
@@ -146,7 +146,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple-obfs (Shadowsocks plugin)=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple-obfs (Shadowsocks plugin) is not set
 # Add luci-app-diskman
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
