--- a/.config
+++ b/.config
@@ -89,7 +89,7 @@ CONFIG_LUCI_LANG_zh_Hans=y
 
 
 # nlbwmon app
-CONFIG_PACKAGE_nlbwmon=y
+# CONFIG_PACKAGE_nlbwmon is not set
 
 # 自定义apps
 CONFIG_PACKAGE_default-settings=y
