--- a/.config
+++ b/.config
@@ -150,12 +150,12 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple-obfs (Shadowsocks plugin) is not set
 # Add luci-app-diskman
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
+# CONFIG_PACKAGE_luci-app-diskman is not set
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs is not set
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk is not set
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm is not set
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456 is not set
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear is not set
 
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 # CONFIG_UnblockNeteaseMusic_NodeJS is not set
