--- a/.config
+++ b/.config
@@ -86,6 +86,7 @@ CONFIG_LUCI_LANG_zh_Hans=y
 
 # Luci statistics
 # CONFIG_PACKAGE_luci-app-statistics is not set
+CONFIG_PACKAGE_luci-app-statistics=y
 
 
 # nlbwmon app
