--- a/.config
+++ b/.config
@@ -101,7 +101,7 @@ CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
-# CONFIG_PACKAGE_luci-app-cpufreq is not set 
+CONFIG_PACKAGE_luci-app-cpufreq=y 
 # CONFIG_PACKAGE_luci-app-sfe is not set
 CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
