--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -179,9 +179,9 @@ jobs:
             * 固件源码：${{ env.REPO_URL }}
             -- Build by ${{ env.BUILD_USER }} @ with Github Action on ${{ env.RELEASE_TAG }}
             🚀 Auto build | 自动编译    
-            当前使用版本:（编译前的最后一次ACwifidude源码更新记录）   
+            当前使用版本:（编译前的最后一次Lean源码更新记录）   
             混合https://github.com/coolsnowwolf/lede 的Packages编译
-            集成 https://github.com/kenzok8/openwrt-packages 插件包
+            
             ${{ env.useVersionInfo }}
             ${{ github.event.commits[0].message }}
         files: ${{ env.FIRMWARE }}/*
